--- a/resume/index.html
+++ b/resume/index.html
@@ -89,26 +89,26 @@ ul{
 <div class="job">
   <span class=col1>Marketing Data Analyst, PJA Advertising + Marketing</span>
   <span class=col2>Cambridge, MA</span>
-  <span class=col3>Aug 2015 - current</span>
+  <span class=col3>Aug 2015 - current (~1.5 years)</span>
 </div>
 <ul>
   <li>
-    Developed analytical strategy across accounts, finding ways to exploit key drivers for each business, while also identifying further opportunities for optimization and growth
+    Used diverse methods of data analysis, using Python, SQL, and R, to extract meaningful insights to drive marketing strategy, visualizing data in dynamic and interactive Tableau dashboards
   </li>
   <li>
-    Employed diverse methods of data analysis, including A/B testing, regression analysis, and market segmentation, to extract meaningful insights that could be leveraged within marketing strategy
+    Led A/B testing strategy and analysis, becoming well-versed in statistical hypothesis testing
   </li>
   <li>
-    Modeled findings into dashboards that could be easily digested and shared amongst C-level execs, and presented reports on a weekly or monthly basis
+    Developed online tools built using Javascript, jQuery, and HTML/CSS, to help automate and streamline internal processes, reducing error and greatly accelerating project time to completion
   </li>
   <li>
-    <i>Technologies used: Google Analytics / Tag Manager / Webmaster Tools, Tableau, R, Python, Git, HTML/CSS, SQL, JavaScript, jquery, Twitter Search API, Google Analytics Core Reporting API</i>
+    Advised on data best practices, mentoring both analysts and web developers in implementing data pipelines with an emphasis on accuracy and efficiency
   </li>
 </ul>
 <div class="job">
   <span class=col1>Co-founder / Consultant, DigitDragon</span>
   <span class=col2>Madison, WI</span>
-  <span class=col3>Dec 2014 - Aug 2015</span>
+  <span class=col3>Dec 2014 - Aug 2015 (9 months)</span>
 </div>
 <ul>
   <li>
@@ -121,7 +121,7 @@ ul{
 <div class="job">
   <span class=col1>Account Strategist, HTMLgraphic Designs</span>
   <span class=col2>Green Bay, WI</span>
-  <span class=col3>Mar 2014 - Nov 2014</span>
+  <span class=col3>Mar 2014 - Nov 2014 (9 months)</span>
 </div>
 <ul>
   <li>
@@ -137,7 +137,7 @@ ul{
 <div class="job">
   <span class=col1>Co-founder / Content Manager, FlightforSight</span>
   <span class=col2>Madison, WI</span>
-  <span class=col3>Jan 2014 - June 2014</span>
+  <span class=col3>Jan 2014 - June 2014 (6 months)</span>
 </div>
 <ul>
   <li>
@@ -150,7 +150,7 @@ ul{
 <div class="job">
   <span class=col1>Intern, The Lodge Music Production</span>
   <span class=col2>New York, NY</span>
-  <span class=col3>Summer/Winter 2013</span>
+  <span class=col3>Summer/Winter 2013 (4 months)</span>
 </div>
 <ul>
   <li>
@@ -164,22 +164,19 @@ ul{
 <div class="job">
   <span class=col1>B.A Music, Lawrence University</span>
   <span class=col2>Appleton, WI</span>
-  <span class=col3>2010-2014</span>
+  <span class=col3>2010-2014 (4 years)</span>
 </div>
 </br>
 
 <h1 class="section">
-  ABOUT ME
+  ABOUT
 </h1>
 <ul>
   <li>
-    Skills: web design, marketing analytics, basic machine learning, data scraping, data visualization, statistical analysis, UX, music/video/photo editing, remote working
+    Skills: web design/development, marketing analytics, basic machine learning, web scraping, data visualization, statistical analysis, UX, automation, remote working, data mining
   </li>
   <li>
     Hobbies/Interests: Composing music, skiing, traveling, rock climbing, cooking, sketching
-  </li>
-  <li>
-    International: Hong Kong, Ecuador; basic German, Spanish, and Cantonese
   </li>
 </ul>
 
