print friendly width, some design edits

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,24 +3,21 @@
 <TITLE>Catherine's Resume</TITLE>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Catherine has been in data science for just over two years. Her strongest skills include drawing insights from web engagement metrics, and visualizing data.">
-<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body, html {
   margin-top: 35;
   padding:0;
-  max-width: 1000px;
+  max-width: 842px;
   margin-left: auto;
   margin-right: auto;
 }
 h1{
   font-size: 36px;
-	font-family: "Inconsolata";
 	font-weight: normal;
 }
 #link{
   padding-left: 20px;
   padding-right: 20px;
-	font-family: "Inconsolata";
 }
 a{
 	color: blue;
@@ -46,15 +43,15 @@ h1.section{
 }
 span.col1{
   float:left;
-  width: 50%;
+  width: 33%;
 }
 span.col2{
   float:left;
-  width: 25%;
+  width: 33%;
 }
 span.col3{
   float:left;
-  width: 25%;
+  width: 34%;
 }
 ul{
   clear: both;
@@ -74,21 +71,21 @@ ul{
 })(window,document,'script','dataLayer','GTM-WBKD5N');</script>
 <!-- End Google Tag Manager -->
 
-  <center>
-	<h1>catherine smith</h1>
-	<div class="nav">
-			<a id="link" class="notes" href="http://catherine.work/notes">notes</a>
-			<a id="link" class="resume" href="http://catherine.work/resume">resume</a>
-			<a id="link" class="contact" href="http://www.google.com/recaptcha/mailhide/d?k=014VTpFHQo_w-bJjM2PEvGXQ==&amp;c=orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014VTpFHQo_w-bJjM2PEvGXQ\75\75\46c\75orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="contact Catherine">contact</a>
-	</div>
-</center>
+
+<h2>Catherine Smith</h2>
+<!--<div class="nav">-->
+        <!--<a id="link" class="notes" href="http://catherine.work/notes">notes</a>-->
+        <!--<a id="link" class="resume" href="http://catherine.work/resume">resume</a>-->
+        <!--<a id="link" class="contact" href="http://www.google.com/recaptcha/mailhide/d?k=014VTpFHQo_w-bJjM2PEvGXQ==&amp;c=orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014VTpFHQo_w-bJjM2PEvGXQ\75\75\46c\75orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="contact Catherine">contact</a>-->
+<!--</div>-->
+
 
 <h1 class="section">
   EXPERIENCE
 </h1>
 <div class="job">
-  <span class=col1>Marketing Data Analyst, PJA Advertising + Marketing</span>
-  <span class=col2>Cambridge, MA</span>
+  <span class=col1>Marketing Data Analyst</span>
+  <span class=col2>PJA Advertising + Marketing</span>
   <span class=col3>Aug 2015 - current (~1.5 years)</span>
 </div>
 <ul>
@@ -106,8 +103,8 @@ ul{
   </li>
 </ul>
 <div class="job">
-  <span class=col1>Co-founder / Consultant, DigitDragon</span>
-  <span class=col2>Madison, WI</span>
+  <span class=col1>Co-founder / Consultant</span>
+  <span class=col2>DigitDragon</span>
   <span class=col3>Dec 2014 - Aug 2015 (9 months)</span>
 </div>
 <ul>
@@ -119,8 +116,8 @@ ul{
   </li>
 </ul>
 <div class="job">
-  <span class=col1>Account Strategist, HTMLgraphic Designs</span>
-  <span class=col2>Green Bay, WI</span>
+  <span class=col1>Account Strategist</span>
+  <span class=col2>HTMLgraphic Designs</span>
   <span class=col3>Mar 2014 - Nov 2014 (9 months)</span>
 </div>
 <ul>
@@ -135,8 +132,8 @@ ul{
   </li>
 </ul>
 <div class="job">
-  <span class=col1>Co-founder / Content Manager, FlightforSight</span>
-  <span class=col2>Madison, WI</span>
+  <span class=col1>Co-founder / Content Manager</span>
+  <span class=col2>FlightforSight</span>
   <span class=col3>Jan 2014 - June 2014 (6 months)</span>
 </div>
 <ul>
@@ -148,8 +145,8 @@ ul{
   </li>
 </ul>
 <div class="job">
-  <span class=col1>Intern, The Lodge Music Production</span>
-  <span class=col2>New York, NY</span>
+  <span class=col1>Intern</span>
+  <span class=col2>The Lodge Music Production</span>
   <span class=col3>Summer/Winter 2013 (4 months)</span>
 </div>
 <ul>
@@ -162,8 +159,8 @@ ul{
   EDUCATION
 </h1>
 <div class="job">
-  <span class=col1>B.A Music, Lawrence University</span>
-  <span class=col2>Appleton, WI</span>
+  <span class=col1>B.A Music</span>
+  <span class=col2>Lawrence University</span>
   <span class=col3>2010-2014 (4 years)</span>
 </div>
 </br>
